--- a/index.html
+++ b/index.html
@@ -5,4 +5,7 @@
   </head>
   <h1>Future Location for CCAS Search Engine</h1>
   <p>*insert info here*</p>
+  <script async src="https://cse.google.com/cse.js?cx=33f4a7076fadf180e">
+  </script>
+  <div class="gcse-search"></div>
 </html>
