--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
   <head>
     <title>Mystery.inc</title>
   </head>
-  <h1>Future Location for CCAS Search Engine</h1>
-  <p>*insert info here*</p>
-  <script async src="https://cse.google.com/cse.js?cx=33f4a7076fadf180e">
-  </script>
-  <div class="gcse-search"></div>
+  <body>
+    <h1>Future Location for CCAS Search Engine</h1>
+    <p>*insert info here*</p>
+    <script async src="https://cse.google.com/cse.js?cx=33f4a7076fadf180e">
+    </script>
+    <div class="gcse-search"></div>
+    <body>
 </html>
