--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Mystery.inc</title>
   </head>
-  <body>
+  <body style="background-color:#6fa8dc;>
     <h1>Future Location for CCAS Search Engine</h1>
     <p>*insert info here*</p>
     <script async src="https://cse.google.com/cse.js?cx=33f4a7076fadf180e">
