--- a/index.html
+++ b/index.html
@@ -9,5 +9,5 @@
     <script async src="https://cse.google.com/cse.js?cx=33f4a7076fadf180e">
     </script>
     <div class="gcse-search"></div>
-   <body bgcolor="#6fa8dc">
+   <body>
 </html>
