--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
   <body>
     <h1>Future Location for CCAS Search Engine</h1>
     <p>*insert info here*</p>
+      <div id="cse-hosted">
+          <div id="cse-header">
+              <a href="https://cse.google.com/cse?cx=33f4a7076fadf180e" id-"cse-logo-target"> == $0
+                    <img height="100" src="https://lh3.googleusercontent.com/pw/AM-JKLXxwHQWqqCG-a47vW2e-i5vKkf-WAKuth9nHYsRQEOIfdxrLICZqliheix_LnPzubWpmp-JrGBxeGM2I4sD59ONyjdjGKpP3c-F3b1JEvwDn2fq7TX-X8GqVdx0aj5l7E1oubSfAbFSb7M3VVFUKvWSQg=w720-h309-no?authuser=0" id="cse-logo" alt="logo"> == $0
+              </a>
+          </div>
+      </div>
     <script async src="https://cse.google.com/cse.js?cx=33f4a7076fadf180e">
     </script>
     <div class="gcse-search"></div>
