--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
   </head>
   <body>
       <div id="cse-hosted">
-          <div id="cse-header">
-              <a href="https://cse.google.com/cse?cx=33f4a7076fadf180e" id-"cse-logo-target"> &nbsp;<img height="100" src="https://lh3.googleusercontent.com/pw/AM-JKLXxwHQWqqCG-a47vW2e-i5vKkf-WAKuth9nHYsRQEOIfdxrLICZqliheix_LnPzubWpmp-JrGBxeGM2I4sD59ONyjdjGKpP3c-F3b1JEvwDn2fq7TX-X8GqVdx0aj5l7E1oubSfAbFSb7M3VVFUKvWSQg=w720-h309-no?authuser=0" id="cse-logo" alt="logo">&nbsp;
+          <div id="cse-header" style="background-color: #6fa8dc">
+              <a href="https://cse.google.com/cse?cx=33f4a7076fadf180e" id-"cse-logo-target" style="background-color: &lt;!DOCTYPE HTML&gt;"> &nbsp;<img height="100" src="https://lh3.googleusercontent.com/pw/AM-JKLXxwHQWqqCG-a47vW2e-i5vKkf-WAKuth9nHYsRQEOIfdxrLICZqliheix_LnPzubWpmp-JrGBxeGM2I4sD59ONyjdjGKpP3c-F3b1JEvwDn2fq7TX-X8GqVdx0aj5l7E1oubSfAbFSb7M3VVFUKvWSQg=w720-h309-no?authuser=0" id="cse-logo" alt="logo">&nbsp;
+              </a>
+      &nbsp;
               </a>
           </div>
       </div>
     <script async src="https://cse.google.com/cse.js?cx=33f4a7076fadf180e">
     </script>
-    <div class="gcse-search"></div>
-    <p><span style="color: rgb(189, 193, 198); font-family: Roboto, arial, sans-serif; font-size: 14px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; background-color: rgb(32, 33, 36); text-decoration-thickness: initial; text-decoration-style: initial; text-decoration-color: initial; display: inline !important; float: none;">© Captains Crew: The Animated Series</span></p>
+    <div class="gcse-search" style="background-color: #FFFFFF"></div>
+    <p><span style="color: rgb(0, 0, 0); font-family: Calibri; font-size: 16px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; background-color: #6fa8dc; text-decoration-thickness: initial; text-decoration-style: initial; text-decoration-color: initial; display: inline !important; float: none;">© Captains Crew: The Animated Series</span></p>
       
 </html>
